clang/test/BSC/Negative/Ownership/RuleCheck/param-or-var2/param-or-var2.cbs
// RUN: %clang_cc1 -verify %s

void func8(int a) {}

void func9(int owned * a) {} // expected-error {{type of 'int' cannot be qualified by 'owned'}}

void func10(int * owned * a) {}

void func11(int * owned a) {
	int * b = (int *)a;
}

void func12(int * owned a) {
	int * b = (int *)a;
}

int main() {
	return 0;
}